--- a/views/add.html
+++ b/views/add.html
@@ -3,15 +3,22 @@
   <div>
     <div class="form-group">
       <label for="todo">Todo</label>
-      <input type="text" id="todo" class="form-control">
+      <input type="text" id="todo" class="form-control" data-bind="value: todo">
     </div>
     <div class="form-group">
         <label for="unique">Unique Id</label>
-        <input type="text" id="unique" class="form-control">
+        <input type="text" id="unique" class="form-control" data-bind="value: id">
       </div>
   </div>
   <div>
-    <button type="button" class="btn btn-primary">Done</button>
-    <a href="/#/main">Cancel</a>
+    <button type="button" class="btn btn-primary" data-bind="click: add">Add</button>
+    <a href="#/">Home</a>
+    <a href="#/todo">View</a>
+  </div>
+  <div data-bind="if: alert">
+    <div class="alert" data-bind="css: (alertClass() === 'error' ? 'alert-danger' : 'alert-info')" role="alert">
+      <span data-bind="text: alert"></span>
+      <a href="javascript:void(0)" data-bind="click: dismiss">Dismiss</a>
+    </div>
   </div>
 </div>
